--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+import smtplib
+
 EMAIL_USE_TLS=True
-EMAIL_HOST='smtp.gmail.com'
+EMAIL_HOST='http.gmail.com'
 EMAIL_PORT=587
 EMAIL_HOST_USER='tonykm101@gmail.com'
 EMAIL_HOST_PASSWORD='acc206wk5'
