--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 import smtplib
 
 EMAIL_USE_TLS=True
-EMAIL_HOST='http.gmail.com'
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_HOST_USER='tonykm101@gmail.com'
-EMAIL_HOST_PASSWORD='acc206wk5'
+EMAIL_HOST_USER=tonykm101@gmail.com
+EMAIL_HOST_PASSWORD=acc206wk
 
 SECRET_KEY='0*p@7rgpn0!%&uqrc0lb*b7v3vz6+k@3n$3oof5@e(47w3fdpu'
 DEBUG=True
