--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
-import smtplib
-
-EMAIL_USE_TLS=True
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=tonykm101@gmail.com
-EMAIL_HOST_PASSWORD=acc206wk
 
 SECRET_KEY='0*p@7rgpn0!%&uqrc0lb*b7v3vz6+k@3n$3oof5@e(47w3fdpu'
 DEBUG=True
@@ -15,3 +8,9 @@ DB_HOST='127.0.0.1'
 MODE='dev'
 ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
+
+EMAIL_USE_TLS=True
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_HOST_USER='tonykm101@gmail.com'
+EMAIL_HOST_PASSWORD='acc206wk5'
