--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ MODE='dev'
 ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 
+import smtplib
 EMAIL_USE_TLS=True
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
