--- a/.env
+++ b/.env
@@ -9,9 +9,8 @@ MODE='dev'
 ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 
-import smtplib
 EMAIL_USE_TLS=True
 EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
-EMAIL_HOST_USER='tonykm101@gmail.com'
-EMAIL_HOST_PASSWORD='acc206wk5'
+EMAIL_HOST_USER='tonnibravo12@gmail.com'
+EMAIL_HOST_PASSWORD='mutulasi'
