--- a/.env
+++ b/.env
@@ -9,8 +9,11 @@ MODE='dev'
 ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 
+
+
 EMAIL_USE_TLS=True
-EMAIL_HOST='smtp.gmail.com'
-EMAIL_PORT=587
-EMAIL_HOST_USER='tonnibravo12@gmail.com'
-EMAIL_HOST_PASSWORD='mutulasi'
+EMAIL_HOST = 'smtp.sendgrid.net'
+EMAIL_HOST_USER = 'tonybravo'
+EMAIL_HOST_PASSWORD = 'acc206wk5'
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
