--- a/.env
+++ b/.env
@@ -11,9 +11,8 @@ DISABLE_COLLECTSTATIC=1
 
 
 
-EMAIL_USE_TLS=True
-EMAIL_HOST = 'smtp.sendgrid.net'
-EMAIL_HOST_USER = 'tonybravo'
-EMAIL_HOST_PASSWORD = 'acc206wk5'
-EMAIL_PORT = 587
-EMAIL_USE_TLS = True
+EMAIL_HOST='smtp.sendgrid.net'
+EMAIL_HOST_USER='tonybravo'
+EMAIL_HOST_PASSWORD='acc206wk5'
+EMAIL_PORT=587
+EMAIL_USE_TLS=False
