move email to setting.py

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ DB_HOST='127.0.0.1'
 MODE='dev'
 ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
+
+
+EMAIL_HOST='smtp.sendgrid.net'
+EMAIL_HOST_USER='tonybravo'
+EMAIL_HOST_PASSWORD='acc206wk5'
+EMAIL_PORT=587
+EMAIL_USE_TLS= TRUE
