--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ EMAIL_HOST='smtp.sendgrid.net'
 EMAIL_HOST_USER='tonybravo'
 EMAIL_HOST_PASSWORD='acc206wk5'
 EMAIL_PORT=587
-EMAIL_USE_TLS= TRUE
+EMAIL_USE_TLS=True
