--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ ALLOWED_HOSTS='pixargram.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
 
 
-EMAIL_HOST='smtp.sendgrid.net'
+EMAIL_HOST='smtp.gmail.com'
 EMAIL_HOST_USER='tonybravo'
 EMAIL_HOST_PASSWORD='acc206wk5'
 EMAIL_PORT=587
