--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DISABLE_COLLECTSTATIC=1
 
 
 EMAIL_HOST='smtp.gmail.com'
-EMAIL_HOST_USER='tonybravo'
+EMAIL_HOST_USER='tonykm101@gmail.com'
 EMAIL_HOST_PASSWORD='acc206wk5'
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
